Compile Elm code to JS file instead of HTML
This lets us have more flexibility with the HTML and how to call the Elm code.
For example, we'll be able to call the Elm from Electron or PhoneGap.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,5 @@ elm-stuff/
 # elm-repl generated files
 repl-temp-*
 
-# The HTML file is generated, so we don't need to keep it.
-index.html
+# This JS file is generated, so we don't need to keep it.
 elm.js
