Move Elm application source code into `src`

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Drive a delivery truck in space",
   "scripts": {
-    "build": "elm make --output elm.js main.elm",
+    "build": "elm make --output elm.js src/*.elm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Craig Buchek",
