--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "Drive a delivery truck in space",
   "scripts": {
+    "setup": "npm install",
     "build": "elm make --output elm.js src/*.elm",
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Craig Buchek",
   "license": "MIT",
   "devDependencies": {
-  }
+    "electron": "^1.5.0"
+  },
+  "main": "electron"
 }
-
